add_executable(test_inference_executor test_inference_executor.cpp)
target_link_libraries(test_inference_executor PRIVATE rl_tools rl_tools_test)
gtest_discover_tests(test_inference_executor)

add_executable(test_inference_l2f_c_interface test_inference_l2f_c_interface.cpp l2f_c_interface.cpp)
target_link_libraries(test_inference_l2f_c_interface PRIVATE rl_tools rl_tools_test)
gtest_discover_tests(test_inference_l2f_c_interface)
